# crop_classification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
crop_classification/: __init__.py  azure_blob.py  classification.py  config_template.py  processing.py  stac.py  visualization.py
docs/: index.md
scripts/: download_s2.py
tests/: test_processing.py  test_visualization.py
