[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-classification"
version = "0.1.0"
description = "End-to-end Sentinel-2 crop classification pipeline for geospatial portfolio projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "PannacottaFu90"}
]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "rasterio>=1.4",
  "geopandas>=0.13",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "requests>=2.31",
  "pystac-client>=0.5",
  "azure-storage-blob>=12.17",
  "joblib>=1.3",
]

[project.urls]
"Homepage" = "https://github.com/PannacottaFu90/crop_classification"
"Source" = "https://github.com/PannacottaFu90/crop_classification"
